--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name = gateway
-eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://10.10.2.137:8761/eureka}
 eureka.instance.preferIpAddress = true
-server.port=8081
+server.port=80
